<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="2dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="6dp"
    tools:context="niks.doubtblast.com.CompDoubts">


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:paddingTop="0dp">
            <android.support.v7.widget.CardView
                android:id="@+id/cq1"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                android:onClick="onClicka">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q1"
                    android:text="@string/t1"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cq6"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                android:onClick="onClickb">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q6"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t2"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cq2"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                android:onClick="onClickc">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q2"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t3"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cq3"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                android:onClick="onClickd">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q3"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t4"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cq4"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q4"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    
                    android:text="@string/t5"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cq5"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q5"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t6"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cq7"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q7"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    
                    android:text="@string/t7"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cq8"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q8"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t8"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cq9"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q9"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t9"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cq10"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q10"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t10"
                    />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cq11"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q11"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t11"
                    />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cq12"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q12"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t12"
                    />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cq13"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q13"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t13"
                    />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cq14"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q14"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t14"
                    />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cq15"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q15"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t15"
                    />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cq16"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q16"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t16"
                    />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cq17"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q17"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t17"
                    />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cq18"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:elevation="100dp"
                card_view:cardCornerRadius="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="4dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/q18"
                    android:textStyle="bold"
                    android:textColor="#5e5e5e"
                    android:text="@string/t18"
                    />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
